force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/cgcloud__Tactic_Condition_Creation_Definition__c.object-meta.xml
<CustomObject>
    <description>Holds the details of tactic condition creation definition.</description>
    <label>Tactic Condition Creation Definition</label>
    <nameField>
        <displayFormat>TCCD-{0000}</displayFormat>
        <label>Tactic Condition Creation Def Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tactic Condition Creation Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>