force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Additional_KPI_Definition_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_KPI_Definition_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the KPI definition used to provide additional information for the condition.</description>
    <label>Additional KPI Definition 1</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Tactic Condition Creation Definitions (Additional KPI Definition 1)</relationshipLabel>
    <relationshipName>Tactic_Condition_Creation_Definitions1</relationshipName>
    <type>Lookup</type>
</CustomField>