force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Allowed_Product_Levels__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Allowed_Product_Levels__c</fullName>
    <description>Defines the eligible product levels when determining automatically the product levels on condition generation.</description>
    <inlineHelpText>Defines the eligible product levels when determining automatically the product levels on condition generation.</inlineHelpText>
    <label>Allowed Product Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
                <label>Sub Category</label>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
                <label>Sub Brand</label>
            </value>
            <value>
                <fullName>Package</fullName>
                <label>Product Price Group</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>