force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Change_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Change_Rule__c</fullName>
    <description>Determines the rule to handle past conditions.</description>
    <label>Change Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>update</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>finish</fullName>
                <default>true</default>
                <label>Finish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>