force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Maintenance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Maintenance__c</fullName>
    <description>Defines the action on the conditions generated by the tactic.</description>
    <label>Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>upsert</fullName>
                <label>Upsert</label>
            </value>
            <value>
                <fullName>delete</fullName>
                <label>Delete</label>
            </value>
            <value>
                <fullName>freeze</fullName>
                <label>Freeze</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>