force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Measure_Code__c</fullName>
    <description>Measure Code of the Condition</description>
    <label>Measure Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>