force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Parent_TCCD__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_TCCD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent TCCD</label>
    <referenceTo>cgcloud__Tactic_Condition_Creation_Definition__c</referenceTo>
    <relationshipLabel>Tactic Condition Creation Definitions</relationshipLabel>
    <relationshipName>Tactic_Condition_Creation_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>