force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Source_KPI_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_KPI_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the KPI definition which is used as the source for generating condition.</description>
    <label>Source KPI Definition</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Tactic Condition Creation Definitions</relationshipLabel>
    <relationshipName>Tactic_Condition_Creation_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>