force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic__c</fullName>
    <description>Tactic for which the rule is defined.</description>
    <label>Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Tactic Condition Creation Definitions</relationshipLabel>
    <relationshipName>Tactic_Condition_Creation_Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>