force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Targets__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Targets__c</fullName>
    <description>Defines the targets to which the conditions are written.</description>
    <label>Targets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
                <default>true</default>
                <label>External</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>