force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/fields/cgcloud__Unique_Measure_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Measure_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contains concatenation of tactic Id and source KPI definition Editable Code</description>
    <label>Unique Measure Name</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>