force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__BOMScope_AllowProdLvlProductValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__BOMScope_AllowProdLvlProductValidation</fullName>
    <active>true</active>
    <description>The BOM Scope of Source KPI Definition must not contain ‘Component’ if Allowed Product Level is ‘Product’.</description>
    <errorConditionFormula>AND(
INCLUDES( cgcloud__Allowed_Product_Levels__c ,&apos;Product&apos;),
INCLUDES(cgcloud__Source_KPI_Definition__r.cgcloud__BoM_Scope__c, &apos;Component&apos;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Allowed_Product_Levels__c</errorDisplayField>
    <errorMessage>The BOM Scope of Source KPI Definition must not contain ‘Component’ if Allowed Product Level is ‘Product’.</errorMessage>
</ValidationRule>