force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__ChangeRule_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__ChangeRule_NotEmpty</fullName>
    <active>true</active>
    <description>The Change Rule field can’t be empty.</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Change_Rule__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Change_Rule__c</errorDisplayField>
    <errorMessage>The Change Rule field can’t be empty.</errorMessage>
</ValidationRule>