force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__Maintenance_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Maintenance_NotEmpty</fullName>
    <active>true</active>
    <description>The Maintenance field can’t be empty.</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Maintenance__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Maintenance__c</errorDisplayField>
    <errorMessage>The Maintenance field can’t be empty.</errorMessage>
</ValidationRule>