force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__Maintenance_UpdateToInitialRestricted.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Maintenance_UpdateToInitialRestricted</fullName>
    <active>true</active>
    <description>The Maintenance field cannot be updated to &apos;Initial&apos; from any other value.</description>
    <errorConditionFormula>AND(
   ISPICKVAL(cgcloud__Maintenance__c , &apos;Initial&apos;),
   ISCHANGED(cgcloud__Maintenance__c)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Maintenance__c</errorDisplayField>
    <errorMessage>The Maintenance field cannot be updated to &apos;Initial&apos; from any other value.</errorMessage>
</ValidationRule>