force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__SourceKpi_CompatibleToProductLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__SourceKpi_CompatibleToProductLevel</fullName>
    <active>true</active>
    <description>The BOM Scope of Source KPI Definition must contain ‘Component’ if Product Level is ‘Component’.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(cgcloud__Product_Level__c, &apos;Component&apos;),
    NOT(INCLUDES(cgcloud__Source_KPI_Definition__r.cgcloud__BoM_Scope__c, &apos;Component&apos;))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Source_KPI_Definition__c</errorDisplayField>
    <errorMessage>The BOM Scope of Source KPI Definition must contain ‘Component’ if Product Level is ‘Component’.</errorMessage>
</ValidationRule>