force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__SourceKPI_EditableWithTotal.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__SourceKPI_EditableWithTotal</fullName>
    <active>true</active>
    <description>The Source KPI Definition must have Record Type &apos;Editable&apos; and Edit Mode &apos;Total&apos;.</description>
    <errorConditionFormula>OR(
    cgcloud__Source_KPI_Definition__r.RecordType.DeveloperName &lt;&gt; &apos;editable&apos;,
    NOT(ISPICKVAL(cgcloud__Source_KPI_Definition__r.cgcloud__Editable_Edit_Mode__c, &apos;total&apos;))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Source_KPI_Definition__c</errorDisplayField>
    <errorMessage>The Source KPI Definition must have Record Type &apos;Editable&apos; and Edit Mode &apos;Total&apos;.</errorMessage>
</ValidationRule>