force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__SourceKPI_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__SourceKPI_NotEmpty</fullName>
    <active>true</active>
    <description>The Source KPI Definition field can’t be empty.</description>
    <errorConditionFormula>ISBLANK(cgcloud__Source_KPI_Definition__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Source_KPI_Definition__c</errorDisplayField>
    <errorMessage>The Source KPI Definition field can’t be empty.</errorMessage>
</ValidationRule>