force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__SourceKPI_Scope.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__SourceKPI_Scope</fullName>
    <active>true</active>
    <description>The Source KPI Definition must have Object Scope ‘Promotion Tactic’.</description>
    <errorConditionFormula>NOT(ISPICKVAL(cgcloud__Source_KPI_Definition__r.cgcloud__Scope__c, &apos;promotiontactic&apos;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Source_KPI_Definition__c</errorDisplayField>
    <errorMessage>The Source KPI Definition must have Object Scope ‘Promotion Tactic’.</errorMessage>
</ValidationRule>