force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__Targets_CheckMaintenanceBeforeUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Targets_CheckMaintenanceBeforeUpdate</fullName>
    <active>true</active>
    <description>The Targets field can be changed after creation only if Maintenance field is set to &apos;Initial&apos;.</description>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(cgcloud__Maintenance__c,&apos;Initial&apos;)),
  ISCHANGED(cgcloud__Targets__c)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Targets__c</errorDisplayField>
    <errorMessage>The Targets field can be changed after creation only if Maintenance field is set to &apos;Initial&apos;.</errorMessage>
</ValidationRule>