force-app/main/default/objects/cgcloud__Tactic_Condition_Creation_Definition__c/validationRules/cgcloud__Targets_ExternalMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Targets_ExternalMandatory</fullName>
    <active>true</active>
    <description>External is mandatory.</description>
    <errorConditionFormula>NOT(INCLUDES(cgcloud__Targets__c, &apos;External&apos;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Targets__c</errorDisplayField>
    <errorMessage>External is mandatory.</errorMessage>
</ValidationRule>